base/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: sample-go-app
  name: sample-go-app
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: replaceme
  port:
    targetPort: go-web
  to:
    kind: Service
    name: replaceme
